# fastapi-mcp-router

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: guide.md  quickstart.md  reference.md
examples/: README.md  server.py
fastapi_mcp_router/: __init__.py  exceptions.py  prompts.py  protocol.py  registry.py  resources.py  router.py  session.py  telemetry.py  types.py
tests/: __init__.py  conftest.py  test_annotations.py  test_background_tasks_injection.py  test_backwards_compat.py  test_completions.py  test_elicitation.py  test_exceptions.py  test_graceful_shutdown.py  test_handle_tools_list.py  test_logging_protocol.py  test_mcp_router_class.py  test_no_deprecation_warnings.py  test_output_schemas.py  test_prm.py  test_progress.py  test_prompts.py  test_protocol.py  test_redis_session.py  test_registry.py  test_registry_generator.py  test_request_injection.py  test_resources.py  test_roots.py  test_router_integration.py  test_sampling.py  test_security.py  test_session.py  test_session_management.py  test_session_store.py  test_sse_events.py  test_sse_streaming.py  test_stateful_post_generator.py  test_streamable_http.py  test_streaming_tools.py  test_subscriptions.py  test_telemetry.py  test_types.py
